added profile page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css">
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -17,7 +18,7 @@
         <h2>Good Morning</h2>
         <p>Are you ready to find a new friend?</p>
       </div>
-      <div class="head-menu">|||</div>
+      <div class="head-menu"><h2>|||</h2></div>
     </div>
 
     <div class="search">
@@ -26,23 +27,33 @@
 
     <div class="categories">
         <div class="categories-item">
-            <div class="categories-item-circle"></div>
+            <div class="categories-item-image">
+                <img src="images/cat.jpg" alt="">
+            </div>
             <div class="categories-item-text"><p>Cat</p></div>
         </div>
         <div class="categories-item">
-            <div class="categories-item-circle"></div>
+            <div class="categories-item-image">
+                <img src="images/dog.jpg" alt="">
+            </div>
             <div class="categories-item-text"><p>Dog</p></div>
         </div>
         <div class="categories-item">
-            <div class="categories-item-circle"></div>
+            <div class="categories-item-image">
+                <img src="images/horse.jpg" alt="">
+            </div>
             <div class="categories-item-text"><p>Horse</p></div>
         </div>
         <div class="categories-item">
-            <div class="categories-item-circle"></div>
+            <div class="categories-item-image">
+                <img src="images/hamster.jpg" alt="">
+            </div>
             <div class="categories-item-text"><p>Hamster</p></div>
         </div>
         <div class="categories-item">
-            <div class="categories-item-circle"></div>
+            <div class="categories-item-image">
+                <img src="images/fish.jpg" alt="">
+            </div>
             <div class="categories-item-text"><p>Fish</p></div>
         </div>
     </div>
@@ -53,7 +64,7 @@
         </div>
         <div class="card">
             <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
+                <img src="https://picsum.photos/500" alt="">
             </div>
             <div class="card-text">
                 <h2>Elizabeth</h2>
@@ -61,13 +72,27 @@
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum.</p>
                 <br>
-                <button>Ask about me</button>
+                <button class="btn" onclick="location.href='profile.html'">Ask about me</button>
             </div>
         </div>
 
         <div class="card">
             <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
+                <img src="https://picsum.photos/400" alt="">
+            </div>
+            <div class="card-text">
+                <h2>Lucas</h2>
+                <p>Male - Adult</p>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum. amet consectetur adipisicing elit. Omnis quasi laborum.</p>
+                <br>
+                <button class="btn">Ask about me</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-photo">
+                <img src="https://picsum.photos/300" alt="">
             </div>
             <div class="card-text">
                 <h2>Elizabeth</h2>
@@ -75,13 +100,13 @@
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum.</p>
                 <br>
-                <button>Ask about me</button>
+                <button class="btn">Ask about me</button>
             </div>
         </div>
 
         <div class="card">
             <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
+                <img src="https://picsum.photos/200" alt="">
             </div>
             <div class="card-text">
                 <h2>Elizabeth</h2>
@@ -89,13 +114,13 @@
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum.</p>
                 <br>
-                <button>Ask about me</button>
+                <button class="btn">Ask about me</button>
             </div>
         </div>
 
         <div class="card">
             <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
+                <img src="https://picsum.photos/100" alt="">
             </div>
             <div class="card-text">
                 <h2>Elizabeth</h2>
@@ -103,27 +128,13 @@
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum.</p>
                 <br>
-                <button>Ask about me</button>
+                <button class="btn">Ask about me</button>
             </div>
         </div>
 
         <div class="card">
             <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
-            </div>
-            <div class="card-text">
-                <h2>Elizabeth</h2>
-                <p>Female - Adult</p>
-                <br>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborum.</p>
-                <br>
-                <button>Ask about me</button>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-photo">
-                <img src="https://picsum.photos/500/500" alt="">
+                <img src="https://picsum.photos/600" alt="">
             </div>
             <div class="card-text">
                 <h2>Elizabeth</h2>
@@ -131,7 +142,7 @@
                 <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quasi laborumx.</p>
                 <br>
-                <button>Ask about me</button>
+                <button class="btn">Ask about me</button>
             </div>
         </div>
     </div>
